# DRF

./: pyproject.toml
DRF/: celery.py  settings.py  urls.py  wsgi.py
Event/: apps.py  signals.py
Event/api/: serializers.py  views.py
Event/tests/: tests.py
test/: tests.py
